Fix the youtube video z-index on the iframe

--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -10,7 +10,7 @@
   border: 0.1rem solid $color-mercury;
   position: relative;
   background-color: $color-mine-shaft;
-  // z-index: 1;
+  z-index: 1;
   // position: absolute;
   // left: 0;
   // right: 0;
