--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -58,6 +58,6 @@ hr {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    // z-index: -1;
   }
 }
